# RDFGraphGPT

./: .gitignore  README.md
RDFGraphGPT/: __init__.py  index.py
RDFGraphGPT/templates/: basic.html  edit.html  from_file.html
pruebas_gpt4/: __init__.py  index.py  pyproject.toml
pruebas_gpt4/templates/: existent.html  graph.html  index.html
